Begin some basic modules

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -14,5 +14,8 @@ See the License for the specific language governing permissions and
 limitations under the License.
 */
 
+$blue: #0069ff;
 $dark-blue: #031b4e;
 $white: #fff;
+$gray: darken($white, 5%);
+$radius: 4px;
