--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,5 +1,5 @@
 /*
-Copyright 2019 DigitalOcean
+Copyright 2020 DigitalOcean
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -17,28 +17,30 @@ limitations under the License.
 @import "variables";
 @import "overwrites";
 
-.dmt-container {
+.dmt {
   @import "~vue-select/src/scss/vue-select";
   @import "~pretty-checkbox/src/pretty-checkbox";
 
-  align-items: center;
-  display: none;
-  height: 100%;
-  justify-content: center;
-  left: 0;
-  margin: 0;
-  padding: 0;
-  pointer-events: none;
-  position: fixed;
-  top: 0;
-  visibility: hidden;
-  width: 100%;
-  z-index: 9999;
+  &.dmt-container {
+    align-items: center;
+    display: none;
+    height: 100%;
+    justify-content: center;
+    left: 0;
+    margin: 0;
+    padding: 0;
+    pointer-events: none;
+    position: fixed;
+    top: 0;
+    visibility: hidden;
+    width: 100%;
+    z-index: 9999;
 
-  &.dmt-container-active {
-    display: flex;
-    pointer-events: auto;
-    visibility: visible;
+    &.dmt-container-active {
+      display: flex;
+      pointer-events: auto;
+      visibility: visible;
+    }
   }
 
   .dmt-background {
