Show a load of additional info a user profile from the API

--- a/src/scss/_overwrites.scss
+++ b/src/scss/_overwrites.scss
@@ -11,5 +11,23 @@ html {
         left: 20px;
       }
     }
+
+    &.profile {
+      .dmt-user-info {
+        padding: 16px 0;
+        text-align: left;
+
+        > .header_label {
+          margin: 0;
+        }
+
+        > code {
+          display: inline-block;
+          font-size: 13px;
+          margin: 0 0 8px;
+          padding: 0 8px;
+        }
+      }
+    }
   }
 }
