Filter user posts by state

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -18,4 +18,6 @@ $blue: #0069ff;
 $dark-blue: #031b4e;
 $white: #fff;
 $gray: darken($white, 10%);
+$spam: rgba(#f6bb42, .3);
+$trash: rgba(#da4453, .3);
 $radius: 4px;
