--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -20,4 +20,5 @@ $white: #fff;
 $gray: darken($white, 10%);
 $spam: rgba(#f6bb42, .3);
 $trash: rgba(#da4453, .3);
+$review: rgba($blue, .3);
 $radius: 4px;
